--- a/index.html
+++ b/index.html
@@ -1542,6 +1542,40 @@ function previewCard() {
                 .back { background: #e8ebff; }
                 .label { font-weight: bold; color: #667eea; margin-bottom: 10px; }
                 .content { margin-bottom: 10px; }
+				/* --- UI COMPACT (force) --- */
+#importanceSelect,
+#folderCategorySelect,
+#importSeparator,
+#importCatSelect,
+#importFolderSelect,
+.input-group select {
+	font-size: 12px !important;
+	padding: 6px 8px !important;
+	height: 32px !important;
+}
+
+.editor-toolbar {
+	padding: 6px !important;
+	gap: 6px !important;
+}
+
+.editor-btn {
+	font-size: 12px !important;
+	padding: 5px 8px !important;
+	line-height: 1 !important;
+}
+
+.color-picker {
+	width: 26px !important;
+	height: 26px !important;
+	padding: 0 !important;
+}
+
+.input-group input[type="text"]{
+	font-size: 12px !important;
+	padding: 6px 8px !important;
+	height: 32px !important;
+}
             </style>
         </head>
         <body>
