--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@
                         
                         <!-- Boutons G I S -->
                         <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2px; margin-bottom: 4px;">
-                            <button class="editor-btn" onclick="formatText('bold')" style="padding: 3px; font-weight: bold; font-size: 10px; height: 24px; display: flex; align-items: center; justify-content: center; border: 1px solid var(--border); border-radius: 3px; background: var(--panel);">G</button>
-                            <button class="editor-btn" onclick="formatText('italic')" style="padding: 3px; font-style: italic; font-size: 10px; height: 24px; display: flex; align-items: center; justify-content: center; border: 1px solid var(--border); border-radius: 3px; background: var(--panel);">I</button>
-                            <button class="editor-btn" onclick="formatText('underline')" style="padding: 3px; text-decoration: underline; font-size: 10px; height: 24px; display: flex; align-items: center; justify-content: center; border: 1px solid var(--border); border-radius: 3px; background: var(--panel);">S</button>
+                            <button class="editor-btn" onclick="formatText('bold','Q')" title="Gras" aria-label="Gras"><b>G</b></button>
+							<button class="editor-btn" onclick="formatText('italic','Q')" title="Italique" aria-label="Italique"><i>I</i></button>
+							<button class="editor-btn" onclick="formatText('underline','Q')" title="Souligné" aria-label="Souligné"><u>S</u></button>
                         </div>
                         
                         <!-- Couleurs -->
