--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                 <span>🖼️</span>
                                 <span style="font-size: 8px;">Image</span>
                             </button>
-                            <button class="editor-btn" onclick="clearFormat()" style="padding: 3px; font-size: 9px; height: 22px; display: flex; align-items: center; justify-content: center; gap: 2px; border: 1px solid var(--border); border-radius: 2px; background: var(--panel);">
+                            <button class="editor-btn" onclick="clearFormat('Q')" title="Effacer la mise en forme" aria-label="Effacer la mise en forme">✖</button>
                                 <span>✖</span>
                                 <span style="font-size: 8px;">Effacer</span>
                             </button>
