--- a/index.html
+++ b/index.html
@@ -937,14 +937,24 @@
         };
     }
 	// Fonction pour appliquer le formatage
-function formatText(command) { 
-    const activeEditor = document.activeElement;
-    if (activeEditor && (activeEditor.id === 'newQuestion' || activeEditor.id === 'newAnswer')) {
-        document.execCommand(command, false, null);
-        activeEditor.focus();
-    }
-}
+function formatText(command, side) {
+	const el = document.getElementById('new' + (side === 'Q' ? 'Question' : 'Answer'));
+	if (!el) return;
 
+	// force le focus dans l'éditeur
+	el.focus();
+
+	// essaie execCommand
+	let ok = false;
+	try { ok = document.execCommand(command, false, null); } catch(e) { ok = false; }
+
+	// fallback moderne si execCommand ne fait rien
+	if (!ok && document.queryCommandSupported && document.queryCommandSupported(command)) {
+		try { document.execCommand(command, false, null); } catch(e) {}
+	}
+
+	el.focus();
+}
 // Fonction pour effacer le formatage
 function clearFormat() { 
     const activeEditor = document.activeElement;
