--- a/index.html
+++ b/index.html
@@ -475,7 +475,28 @@
             margin-left: 10px;
             animation: pulse 2s infinite;
         }
+		.card-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background: var(--card-bg);
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--border);
+    color: var(--text);
+}
 
+/* Ajustement du padding pour laisser de la place au badge en haut */
+.card-front {
+    padding-top: 60px !important;
+}
         @keyframes pulse {
             0% { opacity: 0.8; }
             50% { opacity: 1; }
